# model_scratch

./: pyproject.toml
Linear_regression/: linear_regression.py  main.py
Mathematical_Optimization/: gd_test1.py  gridient_descent.py  lp1.py
Ridge_Regression/: main.py  ridge_regression.py
