[tool.poetry]
name = "model_scratch"
version = "0.1.0"
description = ""
authors = ["yu-ololo"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.19.4"
sklearn = "^0.0"
matplotlib = "^3.3.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
